5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1838_1273.log
== TEST (2019-06-19 13:56:52) 
-- CODE:
from numpy import *
from numpy.linalg import *

x=array()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 13:59:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

x=array()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 14:36:36) 
-- CODE:
from numpy import *
from numpy.linalg import *

x1-x2=50
x2-x3=-120
x3=350
x1+x4=870
print(x1)
x=array([[x1,x2,x3,x4]])
y=array([[380,540,470,x1]])
z=array([[430,x3,420,420]])
k=array([[x2,420,400,450]])

-- ERROR:
File "XXXX", line 4
    x1-x2=50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 14:36:51) 
-- CODE:
from numpy import *
from numpy.linalg import *

x1-x2=50
x2-x3=-120
x3=350
x1+x4=870
print(x1)
#x=array([[x1,x2,x3,x4]])
#y=array([[380,540,470,x1]])
#z=array([[430,x3,420,420]])
#k=array([[x2,420,400,450]])

-- ERROR:
File "XXXX", line 4
    x1-x2=50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 14:37:11) 
-- CODE:
from numpy import *
from numpy.linalg import *
x3=350

x2-x3=-120
x1-x2=50
x1+x4=870
print(x1)
#x=array([[x1,x2,x3,x4]])
#y=array([[380,540,470,x1]])
#z=array([[430,x3,420,420]])
#k=array([[x2,420,400,450]])

-- ERROR:
File "XXXX", line 5
    x2-x3=-120
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:04:52) 
-- CODE:
from numpy import *
from numpy.linalg import *
x3=350




x2 =  (-120) + x3 
x1 =  x2+ 50
x4 = 870-x1

v=zeros(4,dtype=int)
v[0]=x1
v[1]=x2
v[2]=x3
v[3]=x4
print(v)


#x=array([[x1,x2,x3,x4]])
#y=array([[380,540,470,x1]])
#z=array([[430,x3,420,420]])
#k=array([[x2,420,400,450]])

#for i in range(4):
#	for j in range(4):
#		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-19 15:05:00) 
-- CODE:
from numpy import *
from numpy.linalg import *
x3=350




x2 =  (-120) + x3 
x1 =  x2+ 50
x4 = 870-x1

v=zeros(4,dtype=int)
v[0]=x1
v[1]=x2
v[2]=x3
v[3]=x4
print(v)


#x=array([[x1,x2,x3,x4]])
#y=array([[380,540,470,x1]])
#z=array([[430,x3,420,420]])
#k=array([[x2,420,400,450]])

#for i in range(4):
#	for j in range(4):
#		
-- EXECUTION TIME:
1.03263
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280 230 350 590]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:41:09) 
-- CODE:
from numpy import *
from numpy.linalg import *
x3=350


x2 =  (-120) + x3 
x1 =  x2+ 50
x4 = 870-x1

v=zeros(4,dtype=int)
v[0]=x1
v[1]=x2
v[2]=x3
v[3]=x4
print(v)


#x=array([[x1,x2,x3,x4]])
#y=array([[380,540,470,x1]])
#z=array([[430,x3,420,420]])
#k=array([[x2,420,400,450]])

#for i in range(4):
#	for j in range(4):
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:42:42) 
-- CODE:
from numpy import *
from numpy.linalg import *
x3=350.0


x2 =  (-120) + x3 
x1 =  x2+ 50
x4 = 870-x1

v=zeros(4,dtype=int)
v[0]=x1
v[1]=x2
v[2]=x3
v[3]=x4
print(v)


#x=array([[x1,x2,x3,x4]])
#y=array([[380,540,470,x1]])
#z=array([[430,x3,420,420]])
#k=array([[x2,420,400,450]])

#for i in range(4):
#	for j in range(4):
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:43:04) 
-- CODE:
from numpy import *
from numpy.linalg import *
x3=350.0


x2 =  (-120) + x3 
x1 =  x2+ 50
x4 = 870-x1

v=zeros(4,dtype=float)
v[0]=x1
v[1]=x2
v[2]=x3
v[3]=x4
print(v)


#x=array([[x1,x2,x3,x4]])
#y=array([[380,540,470,x1]])
#z=array([[430,x3,420,420]])
#k=array([[x2,420,400,450]])

#for i in range(4):
#	for j in range(4):
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-19 15:43:07) 
-- CODE:
from numpy import *
from numpy.linalg import *
x3=350.0


x2 =  (-120) + x3 
x1 =  x2+ 50
x4 = 870-x1

v=zeros(4,dtype=float)
v[0]=x1
v[1]=x2
v[2]=x3
v[3]=x4
print(v)


#x=array([[x1,x2,x3,x4]])
#y=array([[380,540,470,x1]])
#z=array([[430,x3,420,420]])
#k=array([[x2,420,400,450]])

#for i in range(4):
#	for j in range(4):
-- EXECUTION TIME:
1.09156
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 14:41:17) 
-- CODE:
from numpy import *
from numpy.linalg import *

k=zeros(4)
x=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
v=array([50,-120,350,870])
v=v.T
h=dot(round(((inv(x),v)),1))

print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 14:41:35) 
-- CODE:
from numpy import *
from numpy.linalg import *

k=zeros(4)
x=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
v=array([50,-120,350,870])
v=v.T
h=dot(round(((inv(x),v)),1))

print(round((h),1)
-- ERROR:
File "XXXX", line 11
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 14:41:58) 
-- CODE:
from numpy import *
from numpy.linalg import *

k=zeros(4)
x=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
v=array([50,-120,350,870])
v=v.T
h=dot((inv(x),v))

print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 14:42:50) 
-- CODE:
from numpy import *
from numpy.linalg import *

k=zeros(4)
x=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
v=array([50,-120,350,870])
v=v.T
h=dot(inv(x),v)

print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 14:42:56) 
-- CODE:
from numpy import *
from numpy.linalg import *

k=zeros(4)
x=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
v=array([50,-120,350,870])
v=v.T
h=dot(inv(x),v)

print(h)
-- EXECUTION TIME:
1.07149
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 14:48:06) 
-- CODE:
from numpy import *
from numpy.linalg import *


x=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
v=array([50,-120,350,870])
v=v.T
h=dot(inv(x),v)

print(h)
-- EXECUTION TIME:
1.02733
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 14:48:15) 
-- CODE:
from numpy import *
from numpy.linalg import *

x=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
v=array([50,-120,350,870])
v=v.T
h=dot(inv(x),v)

print(h)
-- EXECUTION TIME:
0.962222
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
